@startuml Database Model

' configuration
hide circle
skinparam linetype ortho

entity "APPLICATIONS" as app {
  *APP_ID : INTEGER <<PK, AUTOINCREMENT>>
  --
  APP_NAME : TEXT
  APP_DATA_PUBLISHER : TEXT
  APP_ACCESS_TOKEN : TEXT
}

entity "SYSTEM_PARAMS" as sysParam {
  *VALUE_KEY : TEXT <<PK>>
  --
  VALUE : TEXT
}

entity "APPLICATION_PARAMS" as appParam {
  *APPLICATION_ID : INTEGER <<PK, FK>>
  *NAME : TEXT <<PK>>
  --
  PUBLIC : INTEGER
  VALUE : TEXT
}

entity "USER_SETTINGS" as userSettings {
  *APPLICATION_ID : INTEGER <<PK, FK>>
  *APPLICATION_PARAM_NAME : TEXT <<PK, FK>>
  *USER_ID : TEXT <<PK, FK>>
  --
  VALUE : TEXT
}

entity "USERS" as user {
  *USER_ID : TEXT <<PK>>
  --
  FIRST_NAME : TEXT
  LAST_NAME : TEXT
  AUTH_METHOD : TEXT
  AUTH_STRING : TEXT
}

entity "ROLES" as roles {
  *NAME : TEXT <<PK>>
  --
  DESCRIPTION : TEXT
}

entity "PRIVILEGES" as privileges {
  *SHORT_DESC : TEXT <<PK>>
  --
  LONG_DESC : TEXT
}

entity "USER2ROLES" as u2r {
  *USER_ID : TEXT <<PK, FK>>
  *ROLE_NAME : TEXT <<PK, FK>>
}

entity "ROLE2PRIVILEGE" as r2p {
  *ROLE_NAME : TEXT <<PK, FK>>
  *PRIVILEGE_SHORT_DESC : TEXT <<PK, FK>>
}

' Relationships
appParam }o--|| app : APPLICATION_ID
userSettings }o--|| app : APPLICATION_ID
userSettings }o--|| appParam : APPLICATION_PARAM_NAME
userSettings }o--|| user : USER_ID
u2r }o--|| user : USER_ID
u2r }o--|| roles : ROLE_NAME
r2p }o--|| roles : ROLE_NAME
r2p }o--|| privileges : PRIVILEGE_SHORT_DESC

@enduml
